--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "@nuxtjs/axios": "^5.13.6",
+    "axios": "^1.7.2",
     "core-js": "^3.25.3",
     "echarts": "^5.5.0",
     "leaflet": "^1.9.4",
