--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "vue-server-renderer": "^2.7.10",
     "vue-template-compiler": "^2.7.10",
     "vue-wordcloud": "^1.1.1",
+    "vue2-datepicker": "^3.11.1",
     "vue2-leaflet": "^2.7.1"
   },
   "devDependencies": {
